--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -3,13 +3,13 @@ services:
   influxdb:
     image: influxdb:latest
     ports:
-      - '8086:8086'
+      - '80:8086'
     volumes:
       - influxdb-storage:/var/lib/influxdb
     environment:
       - INFLUXDB_DB=db0
-      - INFLUXDB_ADMIN_USER=${INFLUXDB_USERNAME}
-      - INFLUXDB_ADMIN_PASSWORD=${INFLUXDB_PASSWORD}
+      - INFLUXDB_ADMIN_USER=admin
+      - INFLUXDB_ADMIN_PASSWORD=admin1234
   chronograf:
     image: chronograf:latest
     ports:
